<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="end">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/search_home_subject"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_semester"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <Spinner
                    android:id="@+id/spinnerSemesterHome"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <SearchView
            android:id="@+id/searchViewHome"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_subject"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_maps"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="16dp"/>

        <GridView
            android:id="@+id/gridViewFloors"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:horizontalSpacing="8dp"
            android:numColumns="1"
            android:verticalSpacing="8dp" />

    </LinearLayout>
</ScrollView>